[gd_scene load_steps=19 format=3 uid="uid://c0qgayng3g6pc"]

[ext_resource type="FontFile" uid="uid://dckyut1557c7h" path="res://DarkTheme/Fonts/Ubuntu-L.ttf" id="1_cnxy1"]
[ext_resource type="Script" path="res://ReplayViewerLoader.gd" id="1_lqahb"]
[ext_resource type="FontFile" uid="uid://r7guvh1d66vn" path="res://Theme/HyperSuperItalic.ttf" id="2_0byft"]
[ext_resource type="PackedScene" uid="uid://q7et66trvhld" path="res://ReplaySelector.tscn" id="2_2sead"]
[ext_resource type="Script" path="res://Menu/ScaledContainerFullscreen.gd" id="4_efa4q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xl3p0"]
bg_color = Color(0.207843, 0.207843, 0.207843, 1)
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 8
corner_radius_top_right = 5
corner_radius_bottom_right = 8
corner_radius_bottom_left = 5
expand_margin_left = 8.0
expand_margin_right = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v4ewd"]
bg_color = Color(0.439216, 0.439216, 0.439216, 1)
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.129412, 0.129412, 0.129412, 1)
corner_radius_top_left = 8
corner_radius_top_right = 5
corner_radius_bottom_right = 8
corner_radius_bottom_left = 5
expand_margin_left = 8.0
expand_margin_right = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gnfbv"]
bg_color = Color(0.207843, 0.207843, 0.207843, 1)
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.352941, 0.780392, 0.67451, 1)
corner_radius_top_left = 8
corner_radius_top_right = 5
corner_radius_bottom_right = 8
corner_radius_bottom_left = 5
expand_margin_left = 8.0
expand_margin_right = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ofcni"]
bg_color = Color(0.0392157, 0.0392157, 0.0392157, 1)
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 8
corner_radius_top_right = 5
corner_radius_bottom_right = 8
corner_radius_bottom_left = 5
expand_margin_left = 8.0
expand_margin_right = 8.0

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_vuv8h"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_dlqso"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aunuk"]
bg_color = Color(0.4, 0.4, 0.4, 0.65098)
border_color = Color(0.407843, 0.0980392, 0.109804, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 8.0
expand_margin_right = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ocpm4"]
bg_color = Color(0.607843, 0.729412, 0.54902, 1)
border_color = Color(0.407843, 0.0980392, 0.109804, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 8.0
expand_margin_right = 8.0
shadow_color = Color(0.184314, 0.352941, 0.12549, 1)
shadow_size = 1
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gm2h7"]
bg_color = Color(0.866667, 0.298039, 0.305882, 1)
border_color = Color(0.407843, 0.0980392, 0.109804, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 8.0
expand_margin_right = 8.0
shadow_color = Color(0.407843, 0.0980392, 0.109804, 1)
shadow_size = 1
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cjac4"]
bg_color = Color(0.498039, 0.901961, 0.352941, 1)
border_color = Color(0.407843, 0.0980392, 0.109804, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 8.0
expand_margin_right = 8.0
shadow_color = Color(0.184314, 0.352941, 0.12549, 1)
shadow_size = 1
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ef7yk"]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(0.392157, 0.392157, 0.392157, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w5lrt"]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(0.258824, 0.258824, 0.258824, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_67hwj"]
default_font = ExtResource("2_0byft")
default_font_size = 26
Button/styles/disabled = SubResource("StyleBoxFlat_xl3p0")
Button/styles/focus = SubResource("StyleBoxFlat_v4ewd")
Button/styles/hover = SubResource("StyleBoxFlat_gnfbv")
Button/styles/normal = SubResource("StyleBoxFlat_xl3p0")
Button/styles/pressed = SubResource("StyleBoxFlat_ofcni")
CheckBox/icons/checked = SubResource("PlaceholderTexture2D_vuv8h")
CheckBox/icons/unchecked = SubResource("PlaceholderTexture2D_dlqso")
CheckBox/styles/focus = SubResource("StyleBoxFlat_aunuk")
CheckBox/styles/hover = SubResource("StyleBoxFlat_aunuk")
CheckBox/styles/hover_pressed = SubResource("StyleBoxFlat_ocpm4")
CheckBox/styles/normal = SubResource("StyleBoxFlat_gm2h7")
CheckBox/styles/pressed = SubResource("StyleBoxFlat_cjac4")
LineEdit/colors/font_uneditable_color = Color(1, 1, 1, 1)
LineEdit/fonts/font = ExtResource("1_cnxy1")
LineEdit/styles/focus = SubResource("StyleBoxFlat_ef7yk")
LineEdit/styles/normal = SubResource("StyleBoxFlat_w5lrt")

[node name="ReplayViewerLoader" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_67hwj")
script = ExtResource("1_lqahb")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_efa4q")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="MapList" type="ItemList" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 480)
layout_mode = 2
size_flags_vertical = 4
item_count = 2
fixed_column_width = 200
item_0/text = "asd"
item_1/text = "asd2"

[node name="ReplaySelector" parent="MarginContainer/HBoxContainer" instance=ExtResource("2_2sead")]
unique_name_in_owner = true
layout_mode = 2
